--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
                             <div class="form-group">
                                 <span id="formTitle">Login:</span>
                                 <br>
-                                <label for="email">Email:</label>
+                                <label for="email">E-mail:</label>
                                 <input type="email" class="form-control" id="email">
                             </div>
                             <div class="form-group">
-                                <label for="pwd">Password:</label>
+                                <label for="pwd">Paswoord:</label>
                                 <input type="password" class="form-control" id="pwd">
                             </div>
                             <div class="checkbox">
                                 <label>
-                                    <input type="checkbox">Remember me</label>
+                                    <input type="checkbox">Onthoud mij</label>
                             </div>
                             <button type="submit" class="btn btn-default">Login</button>
                         </form>
