--- a/dashboard.html
+++ b/dashboard.html
@@ -1,12 +1,49 @@
 <!doctype html>
 <html>
+
 <head>
     <meta charset="UTF-8">
-    <title>Untitled Document</title>
+    <title>Vas-y</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/dashboard.css" rel="stylesheet">
 </head>
+
 <body>
+
+    <!--Nav bar-->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Vas-y</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav navbar-right navbarDashboard">
+                    <li><a href="#">Berichten <span class="glyphicon glyphicon-envelope"></span></a>
+                    </li>
+                    <li><a href="#">Mijn account<img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"></a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <div class="row">
+        <div class="col-sm-3" style="background-color:lavender;">.col-sm-3</div>
+        <div class="col-sm-9" style="background-color:lavenderblush;">.col-sm-9</div>
+    </div>
+
 
 
 
 </body>
+
 </html>
