--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
     <script src="js/bootstrap.js"></script>
     <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/main.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
 
     <script type="text/javascript">
         $(document).ready(function () {
