Login button linked
Goed voor testen

--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
                                 <label>
                                     <input type="checkbox">Onthoud mij</label>
                             </div>
-                            <button type="submit" class="btn btn-default">Login</button>
+                            <a href="dashboard.html" class="btn btn-default" role="button">Login</a>
+                            <!--<button type="submit" class="btn btn-default">Login</button>-->
                         </form>
                     </div>
                     <li><a href="#">Info voor ouders</a></li>
