--- a/dashboard.html
+++ b/dashboard.html
@@ -26,9 +26,9 @@
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right navbarDashboard">
-                    <li><a href="#">Berichten <span class="glyphicon glyphicon-envelope"></span></a>
+                    <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Berichten</a>
                     </li>
-                    <li><a href="#">Mijn account<img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"></a>
+                    <li><a href="#"><img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
                     </li>
                 </ul>
             </div>
