--- a/index.html
+++ b/index.html
@@ -168,7 +168,7 @@ niet afging.” </span>
                             <label>
                                 <input type="checkbox">Remember me</label>
                         </div>
-                        <button type="submit" class="btn btn-default">Login</button>
+                        <a href="dashboard.html" class="btn btn-default" role="button">Login</a>
                     </form>
                 </div>
                 <div class="modal-footer">
