Begonnen met ontwerp dashboard

--- a/dashboard.html
+++ b/dashboard.html
@@ -28,7 +28,8 @@
                 <ul class="nav navbar-nav navbar-right navbarDashboard">
                     <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Berichten</a>
                     </li>
-                    <li><a href="#"><img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
+                    <li>
+                        <a href="#"><img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
                     </li>
                 </ul>
             </div>
@@ -37,8 +38,20 @@
 
 
     <div class="row">
-        <div class="col-sm-3" style="background-color:lavender;">.col-sm-3</div>
-        <div class="col-sm-9" style="background-color:lavenderblush;">.col-sm-9</div>
+        <div class="col-sm-3" id="leftDash">
+            <ul>
+                <li>Berichten</li>
+                <li>Vind je leerkracht</li>
+                <li>Vakken</li>
+                <li>Scholen</li>
+            </ul>
+        </div>
+        <div class="col-sm-9" id="rightDash">
+            <h1>Dashboard:</h1>
+            <div class="innerDiv">
+
+            </div>
+        </div>
     </div>
 
 
