--- a/dashboard.html
+++ b/dashboard.html
@@ -40,18 +40,38 @@
     <div class="row">
         <div class="col-sm-3" id="leftDash">
             <ul>
-                <li>Berichten</li>
-                <li>Vind je leerkracht</li>
-                <li>Vakken</li>
-                <li>Scholen</li>
+                <li><a href="#Overzicht">Overzicht</a></li>
+                <li><a href="#Bericht">Berichten</a></li>
+                <li><a href="#Leerkracht">Vind je leerkracht</li>
+                <li><a href="#Vak">Vakken</li>
+                <li><a href="#School">Scholen</li>
+                <li><a href="#Les">Lessen</li>
             </ul>
         </div>
         <div class="col-sm-9" id="rightDash">
             <h1>Dashboard:</h1>
             <div class="innerDiv">
-
+                blablabla
             </div>
         </div>
+    </div>
+    <div id="#Overzicht">
+        home
+    </div>
+    <div id="#Bericht">
+        hier komen de berichten
+    </div>
+    <div id="#Leerkracht">
+        leerkracht
+    </div>
+    <div id="#Vak">
+        vak
+    </div>
+    <div id="#School">
+        scholen
+    </div>
+    <div id="#Les">
+        overzicht lessen
     </div>
 
 
