--- a/dashboard.html
+++ b/dashboard.html
@@ -55,6 +55,8 @@
             </div>
         </div>
     </div>
+    <div class="container">
+    <div class="tab-content">
     <div id="#Overzicht">
         home
     </div>
@@ -72,6 +74,8 @@
     </div>
     <div id="#Les">
         overzicht lessen
+    </div>
+    </div>
     </div>
 
 
