Bug met links gefixt

--- a/dashboard.html
+++ b/dashboard.html
@@ -42,10 +42,10 @@
             <ul>
                 <li><a href="#Overzicht">Overzicht</a></li>
                 <li><a href="#Bericht">Berichten</a></li>
-                <li><a href="#Leerkracht">Vind je leerkracht</li>
-                <li><a href="#Vak">Vakken</li>
-                <li><a href="#School">Scholen</li>
-                <li><a href="#Les">Lessen</li>
+                <li><a href="#Leerkracht">Vind je leerkracht</a></li>
+                <li><a href="#Vak">Vakken</a></li>
+                <li><a href="#School">Scholen</a></li>
+                <li><a href="#Les">Lessen</a></li>
             </ul>
         </div>
         <div class="col-sm-9" id="rightDash">
