--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -5,10 +5,10 @@
     <meta charset="UTF-8">
     <title>Vas-y</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
-    <script src="js/bootstrap.js"></script>
-    <link href="css/bootstrap.css" rel="stylesheet">
-    <link href="css/dashboard.css" rel="stylesheet">
+    <script type="text/javascript" src="../js/jquery-1.11.3.js"></script>
+    <script src="../js/bootstrap.js"></script>
+    <link href="../css/bootstrap.css" rel="stylesheet">
+    <link href="../css/dashboard.css" rel="stylesheet">
 </head>
 
 <body>
@@ -29,7 +29,7 @@
                     <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Berichten</a>
                     </li>
                     <li>
-                        <a href="#"><img src="img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
+                        <a href="#"><img src="../img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
                     </li>
                 </ul>
             </div>
@@ -51,32 +51,32 @@
         <div class="col-sm-9" id="rightDash">
             <h1>Dashboard:</h1>
             <div class="innerDiv">
-                blablabla
+                <div class="container">
+                    <div class="tab-content">
+                        <div id="#Overzicht">
+                            home
+                        </div>
+                        <div id="#Bericht">
+                            hier komen de berichten
+                        </div>
+                        <div id="#Leerkracht">
+                            leerkracht
+                        </div>
+                        <div id="#Vak">
+                            vak
+                        </div>
+                        <div id="#School">
+                            scholen
+                        </div>
+                        <div id="#Les">
+                            overzicht lessen
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
-    <div class="container">
-    <div class="tab-content">
-    <div id="#Overzicht">
-        home
-    </div>
-    <div id="#Bericht">
-        hier komen de berichten
-    </div>
-    <div id="#Leerkracht">
-        leerkracht
-    </div>
-    <div id="#Vak">
-        vak
-    </div>
-    <div id="#School">
-        scholen
-    </div>
-    <div id="#Les">
-        overzicht lessen
-    </div>
-    </div>
-    </div>
+
 
 
 
