--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
                                 <label>
                                     <input type="checkbox">Onthoud mij</label>
                             </div>
-                            <a href="dashboard.html" class="btn btn-default" role="button">Login</a>
+                            <a href="dashboard" class="btn btn-default" role="button">Login</a>
                             <!--<button type="submit" class="btn btn-default">Login</button>-->
                         </form>
                     </div>
@@ -168,7 +168,7 @@ niet afging.” </span>
                             <label>
                                 <input type="checkbox">Remember me</label>
                         </div>
-                        <a href="dashboard.html" class="btn btn-default" role="button">Login</a>
+                        <a href="dashboard" class="btn btn-default" role="button">Login</a>
                     </form>
                 </div>
                 <div class="modal-footer">
