--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -42,7 +42,7 @@
             <ul>
                 <li><a href="#Overzicht">Overzicht</a></li>
                 <li><a href="#Bericht">Berichten</a></li>
-                <li><a href="#Leerkracht">Vind je leerkracht</a></li>
+                <li><a href="#Leerkracht">Leerkracht</a></li>
                 <li><a href="#Vak">Vakken</a></li>
                 <li><a href="#School">Scholen</a></li>
                 <li><a href="#Les">Lessen</a></li>
