Php files toegevoegd

--- a/index.html
+++ b/index.html
@@ -164,13 +164,13 @@ niet afging.” </span>
                         </div>
                         <div class="checkbox">
                             <label>
-                                <input type="checkbox">Remember me</label>
+                                <input type="checkbox">Onthoud mij</label>
                         </div>
                         <a href="dashboard" class="btn btn-default" role="button">Login</a>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Sluit venster</button>
                 </div>
             </div>
 
@@ -227,8 +227,7 @@ niet afging.” </span>
                         <div class="form-group">
 
                             <input type="checkbox" id="leerkrachtCheckbox">
-                            <label for="leerkrachtCheckbox"> Ik ben leerkracht
-                            </label>
+                            <label for="leerkrachtCheckbox"> Ik ben leerkracht</label>
                             <div id="leerkrachtOption">
                                 <div class="form-group">
                                     Vul de code voor leerkrachten in:
@@ -241,7 +240,7 @@ niet afging.” </span>
                     </form>
                 </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Sluit venster</button>
                 </div>
             </div>
 
