--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -9,6 +9,17 @@
     <script src="../js/bootstrap.js"></script>
     <link href="../css/bootstrap.css" rel="stylesheet">
     <link href="../css/dashboard.css" rel="stylesheet">
+    <script type="text/javascript">
+        $("document").ready(function () {
+            var right = document.getElementById('messagesDiv').style.height;
+            var left = document.getElementById('profileInfoDiv').style.height;
+            if (left > right) {
+                document.getElementById('profileInfoDiv').style.height = left;
+            } else {
+                document.getElementById('messagesDiv').style.height = right;
+            }
+        });
+    </script>
 </head>
 
 <body>
@@ -29,7 +40,7 @@
                     <li><a href="#"><span class="glyphicon glyphicon-envelope"></span> Berichten</a>
                     </li>
                     <li>
-                        <a href="#"><img src="../img/user.png" class="img-circle" alt="Cinque Terre" width="20" height="20"> Mijn account</a>
+                        <a href="#"><img src="../img/user.png" class="img-circle" width="20" height="20"> Mijn account</a>
                     </li>
                 </ul>
             </div>
@@ -39,7 +50,7 @@
 
     <div class="row">
         <div class="col-sm-3" id="leftDash">
-            <ul>
+            <ul id="menu">
                 <li><a href="#Overzicht">Overzicht</a></li>
                 <li><a href="#Bericht">Berichten</a></li>
                 <li><a href="#Leerkracht">Leerkracht</a></li>
@@ -48,37 +59,44 @@
                 <li><a href="#Les">Lessen</a></li>
             </ul>
         </div>
-        <div class="col-sm-9" id="rightDash">
+
+        <div class="col-sm-8" id="rightDash">
             <h1>Dashboard:</h1>
-            <div class="innerDiv">
-                <div class="container">
-                    <div class="tab-content">
-                        <div id="#Overzicht">
-                            home
-                        </div>
-                        <div id="#Bericht">
-                            hier komen de berichten
-                        </div>
-                        <div id="#Leerkracht">
-                            leerkracht
-                        </div>
-                        <div id="#Vak">
-                            vak
-                        </div>
-                        <div id="#School">
-                            scholen
-                        </div>
-                        <div id="#Les">
-                            overzicht lessen
-                        </div>
+
+            <div class="col-sm-3 pressedDiv" id="profileInfoDiv">
+                <img src="../img/user_student.png" class="img-circle" id="profilePic">
+                <p>Leerling X</p>
+                <p>School X</p>
+                <p>Klas X</p>
+            </div>
+
+            <div class="pressedDiv rightPressedDiv col-sm-8" id="messagesDiv">
+                <b> Berichten</b> <span class="glyphicon glyphicon-envelope"></span>
+                <br>
+                <div id="messagesBox">
+                    Je hebt geen nieuwe berichten
+                </div>
+            </div>
+
+            <div class="pressedDiv col-sm-12">
+                <div class="tab-content">
+                    <div id="#Leerkracht">
+                        leerkracht
+                    </div>
+                    <div id="#Vak">
+                        vak
+                    </div>
+                    <div id="#School">
+                        scholen
+                    </div>
+                    <div id="#Les">
+                        overzicht lessen
                     </div>
                 </div>
             </div>
+
         </div>
     </div>
-
-
-
 
 
 </body>
