Index pagina wat aangepast (css)

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
             </div>
         </div>
     </nav>
-
+        
     <div id="homeTextDiv">
         <span id="homeText1" class="homeText">“Het is leuk, want de tutor is lief en ze zorgt dat ik
 de leerstof beter begrijp en ze moedigt me aan,
@@ -138,6 +138,10 @@ niet afging.” </span>
                 <img src="img/foto3.jpg" alt="Foto 3" class="carouselPicture">
             </div>
         </div>
+    </div>
+    
+    <div id="backgroundSite">
+        <h1 style="text-align: center">Vas-y</h1>
     </div>
 
 
