--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                             <!--<button type="submit" class="btn btn-default">Login</button>-->
                         </form>
                     </div>
-                    <li><a href="#">Info voor ouders</a></li>
-                    <li><a href="#">Info voor leerlingen</a></li>
+                    <li><a href="leerling.html">Info voor ouders</a></li>
+                    <li><a href="ouders.html">Info voor leerlingen</a></li>
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
