--- a/leerling.html
+++ b/leerling.html
@@ -1,1 +1,140 @@
 
+<!doctype html>
+<html>
+
+<head>
+    <meta charset="UTF-8">
+    <title>Vas-y</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <script>
+      
+    </script>
+</head>
+
+<body>
+
+
+    <!--Nav bar-->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Vas-y</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <div id="login-form">
+                        <form role="form">
+                            <div class="form-group">
+                                <span id="formTitle">Login:</span>
+                                <br>
+                                <label for="email">E-mail:</label>
+                                <input type="email" class="form-control" id="email">
+                            </div>
+                            <div class="form-group">
+                                <label for="pwd">Paswoord:</label>
+                                <input type="password" class="form-control" id="pwd">
+                            </div>
+                            <div class="checkbox">
+                                <label>
+                                    <input type="checkbox">Onthoud mij</label>
+                            </div>
+                            <a href="dashboard" class="btn btn-default" role="button">Login</a>
+                            <!--<button type="submit" class="btn btn-default">Login</button>-->
+                        </form>
+                    </div>
+                    <li><a href="leerling.html">Info voor ouders</a></li>
+                    <li><a href="ouders.html">Info voor leerlingen</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-user"></span> Login</a></li>
+                    <li><a data-toggle="modal" data-target="#signupModal"><span class="glyphicon glyphicon-hand-right"></span> Nog geen lid?</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
+
+    <!--Carousel-->
+
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+            <li data-target="#myCarousel" data-slide-to="1"></li>
+            <li data-target="#myCarousel" data-slide-to="2"></li>
+        </ol>
+
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active">
+                <img src="img/foto1.jpeg" alt="Foto 1" class="carouselPicture">
+            </div>
+
+            <div class="item">
+                <img src="img/foto2.jpg" alt="Foto 2" class="carouselPicture">
+            </div>
+
+            <div class="item">
+                <img src="img/foto3.jpg" alt="Foto 3" class="carouselPicture">
+            </div>
+        </div>
+    </div>
+    
+    <div id="backgroundSite">
+        <h1 style="text-align: center">Vas-y</h1>
+    </div>
+
+
+
+
+    <div class="modal fade" id="loginModal" role="dialog">
+        <div class="modal-dialog">
+
+            <!-- Modal content-->
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <span id="formTitle">Login:</span>
+                </div>
+                <div class="modal-body">
+                    <form role="form">
+                        <div class="form-group">
+                            <label for="email">E-mail:</label>
+                            <input type="email" class="form-control" id="email" placeholder="Vul je e-mailadres in">
+                        </div>
+                        <div class="form-group">
+                            <label for="pwd">Paswoord:</label>
+                            <input type="password" class="form-control" id="pwd" placeholder="Vul je paswoord in">
+                        </div>
+                        <div class="checkbox">
+                            <label>
+                                <input type="checkbox">Onthoud mij</label>
+                        </div>
+                        <a href="dashboard" class="btn btn-default" role="button">Login</a>
+                    </form>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Sluit venster</button>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+</body>
+
+</html>
+Status API Training Shop Blog About Pricing
+© 2016 GitHub, Inc. Terms Privacy Security Contact Help
