--- a/ouders.html
+++ b/ouders.html
@@ -1,7 +1,49 @@
+<!doctype html>
 <html>
 
+<head>
+    <meta charset="UTF-8">
+    <title>Vas-y</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script type="text/javascript" src="js/jquery-1.11.3.js"></script>
+    <script src="js/bootstrap.js"></script>
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <link href="css/index.css" rel="stylesheet">
+
+    <script>
+      
+    </script>
+</head>
 
 <body>
+
+
+    <!--Nav bar-->
+    <nav class="navbar navbar-default">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand" href="#">Vas-y</a>
+            </div>
+            <div class="collapse navbar-collapse" id="myNavbar">
+                <ul class="nav navbar-nav">
+                    <li class="active"><a href="#">Home</a></li>
+                    <li><a href="leerling.html">Info voor ouders</a></li>
+                    <li><a href="ouders.html">Info voor leerlingen</a></li>
+
+                </ul>
+                <ul class="nav navbar-nav navbar-right">
+                    <li><a data-toggle="modal" data-target="#loginModal"><span class="glyphicon glyphicon-user"></span> Login</a></li>
+                    <li><a data-toggle="modal" data-target="#signupModal"><span class="glyphicon glyphicon-hand-right"></span> Nog geen lid?</a></li>
+                </ul>
+            </div>
+        </div>
+    </nav>
+
 Het begeleidingsprogramma Vas-y wordt in onze school georganiseerd. <br>
 Dit project is een initiatief van de hogeschool Odisee- Campus Brussel en wordt gesubsidieerd door het Departement Onderwijs en vorming.<br><br>
 
