--- a/index.html
+++ b/index.html
@@ -79,10 +79,12 @@
                             <!--<button type="submit" class="btn btn-default">Login</button>-->
                         </form>
                     </div>
-                    <li><a href="#">Leerkrachten/Tutoren</a></li>
                     <li><a href="leerling.html">Leerling</a></li>
                     <li><a href="ouders.html">Ouder</a></li>
+                    <li><a href="#">Leerkrachten/Tutoren</a></li>
                     <li><a href="school.html">Scholen</a></li>
+                    <li><a href="#">Medewerker</a></li>
+                    
 
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
