--- a/dashboard/berichten.html
+++ b/dashboard/berichten.html
@@ -50,7 +50,6 @@
 
     <div class="row">
         <div class="col-sm-3" id="leftDash">
-            <h3 id="menuTitle">Menu:</h3>
             <ul id="menu">
                 <li><a href="#Overzicht">Overzicht</a></li>
                 <li><a href="#Bericht">Berichten</a></li>
@@ -62,37 +61,13 @@
         </div>
 
         <div class="col-sm-8" id="rightDash">
-            <h1>Dashboard:</h1>
-
-            <div class="col-sm-3 pressedDiv" id="profileInfoDiv">
-                <img src="../img/user_student.png" class="img-circle" id="profilePic">
-                <p>Leerling X</p>
-                <p>School X</p>
-                <p>Klas X</p>
-            </div>
-
-            <div class="pressedDiv rightPressedDiv col-sm-8" id="messagesDiv">
+            <h1>Jouw berichten:</h1>
+            
+            <div class="pressedDiv rightPressedDiv col-sm-11" id="messagesDiv">
                 <b> Berichten</b> <span class="glyphicon glyphicon-envelope"></span>
                 <br>
                 <div id="messagesBox">
                     Je hebt geen nieuwe berichten
-                </div>
-            </div>
-
-            <div class="pressedDiv col-sm-12">
-                <div class="tab-content">
-                    <div id="#Leerkracht">
-                        leerkracht
-                    </div>
-                    <div id="#Vak">
-                        vak
-                    </div>
-                    <div id="#School">
-                        scholen
-                    </div>
-                    <div id="#Les">
-                        overzicht lessen
-                    </div>
                 </div>
             </div>
 
