--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -42,6 +42,9 @@
                     <li>
                         <a href="account.html"><img src="../img/user.png" class="img-circle" width="20" height="20"> Mijn account</a>
                     </li>
+                    <li>
+                        <a href="#" onclick="tryLogout()"><span class="glyphicon glyphicon-log-out"></span> Uitloggen</a>
+                    </li>
                 </ul>
             </div>
         </div>
@@ -50,14 +53,11 @@
 
     <div class="row">
         <div class="col-sm-3" id="leftDash">
-            <h3 id="menuTitle">Menu:</h3>
             <ul id="menu">
-                <li><a href="#Overzicht">Overzicht</a></li>
-                <li><a href="#Bericht">Berichten</a></li>
-                <li><a href="#Leerkracht">Leerkracht</a></li>
-                <li><a href="#Vak">Vakken</a></li>
-                <li><a href="#School">Scholen</a></li>
-                <li><a href="#Les">Lessen</a></li>
+                <li><a href="index.html">Dashboard</a></li>
+                <li><a href="berichten.html">Berichten</a></li>
+                <li><a href="leerkrachten.html">Leerkrachten</a></li>
+                <li><a href="#Afspraken">Jouw afspraken</a></li>
             </ul>
         </div>
 
