--- a/dashboard/index.html
+++ b/dashboard/index.html
@@ -79,21 +79,27 @@
                 </div>
             </div>
 
-            <div class="pressedDiv col-sm-12">
-                <div class="tab-content">
-                    <div id="#Leerkracht">
-                        leerkracht
-                    </div>
-                    <div id="#Vak">
-                        vak
-                    </div>
-                    <div id="#School">
-                        scholen
-                    </div>
-                    <div id="#Les">
-                        overzicht lessen
-                    </div>
-                </div>
+            <div class="pressedDiv col-sm-11">
+                
+                <table id="messages">
+                    <tr>
+                        <th colspan="2">
+                            MELDINGEN:
+                        </th>
+                    </tr>
+                    <tr>
+                        <td width="1%">Type</td>
+                        <td>Melding1</td>
+                    </tr>
+                    <tr>
+                        <td>Type</td>
+                        <td>Melding2</td>
+                    </tr>
+                    <tr>
+                        <td>Type</td>
+                        <td>Melding3</td>
+                    </tr>
+                </table>
             </div>
 
         </div>
