--- a/dashboard/leerkrachten.html
+++ b/dashboard/leerkrachten.html
@@ -33,7 +33,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="../index.html">Vas-y</a>
+                <a class="navbar-brand" href="index.html">Vas-y</a>
             </div>
             <div class="collapse navbar-collapse" id="myNavbar">
                 <ul class="nav navbar-nav navbar-right navbarDashboard">
@@ -83,16 +83,16 @@
                         <td>
                             <select>
                                 <option selected>
-                                    School 1
+                                    Sint-Guido-Instituut
                                 </option>
                                 <option>
-                                    School 2
+                                    Imelda-Instituut
                                 </option >
                                 <option>
-                                    School 3
+                                    Maria-Boodschaplyceum
                                 </option>
                                 <option>
-                                    School 4
+                                    Regina Pacisinstituut
                                 </option>
                                 <option>
                                     ...
